--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,9 @@ Package: mortfit
 Type: Package
 Title: Fit and evaluate mortality models
 Version: 0.0.1
-Date: 2011-07-20
+Date: 2016-03-01
 Author: Dennis Feehan
-Maintainer: Dennis Feehan <dfeehan@princeton.edu>
+Maintainer: Dennis Feehan <feehan@berkeley.edu>
 Description: mortfit is a package to accompany [article],
     which evaluates the use of several mortality models
     using data on deaths at old ages from the
