right about to start reviewing functional forms

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,11 +37,11 @@ exportClasses(mortalityHazard)
 exportClasses(mortalityModel)
 exportClasses(mortalityPrediction)
 import(Rcpp)
-import(functional)
 import(ggplot2)
 import(graphics)
 import(numDeriv)
 import(plyr)
 import(stats)
 importFrom(Rcpp,sourceCpp)
+importFrom(functional,Curry)
 useDynLib(mortfit)
